# alphazero-chess

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: main.py
